# python-print-extended

./: .pre-commit-config.yaml  README.md  requirements-dev.txt  setup.cfg
.github/workflows/: ci.yml
examples/: README.md  colors.py  grouping.py  output.py  styling.py
src/print_extended/: __init__.py
tests/: __init__.py  test_print_colors.py  test_print_extended.py  test_print_text_styles.py
