[metadata]
name = python-print-extended
version = 0.1.0
description = Beginner-friendly pretty printing
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    print
    beginner
    console
    pretty
license = MIT
url = https://github.com/spenserblack/python-print-extended
project_urls =
    Bug Tracker = https://github.com/spenserblack/python-print-extended/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.7
install_requires =
    sty>=1,<2

[options.packages.find]
where = src
